--- a/MainActivity22/app/build.gradle
+++ b/MainActivity22/app/build.gradle
@@ -12,8 +12,6 @@ android {
 
     buildTypes {
         release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
 }
@@ -21,5 +19,6 @@ android {
 dependencies {
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:+'
+    compile 'com.google.android.gms:play-services:6.5.+'
     compile files('libs/pkrequestmanager.jar')
 }
