--- a/MainActivity22/app/src/main/AndroidManifest.xml
+++ b/MainActivity22/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
 <manifest
 		xmlns:android="http://schemas.android.com/apk/res/android"
       	package="com.numix.icons_circle"
-      	android:versionCode="8"
-      	android:versionName="2.0.3"
+      	android:versionCode="9"
+      	android:versionName="2.0.4"
       	android:installLocation="auto">
     <!-- android:installLocation is set to "auto"
     change to "internalOnly" if you want it installed to the internal memory -->
@@ -30,6 +30,10 @@
     <!-- Permission required for setting the wallpaper -->
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <uses-permission android:name="android.permission.SET_WALLPAPER_HINTS" />
+
+    <!-- Google Mobile Ads permissions. -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!-- This lets this code work on any screen size -->
     <supports-screens
@@ -65,11 +69,8 @@
             </intent-filter>
         </activity>
 
-    <!-- Various Activities inside the app -->
-		<activity
-            android:name="com.numix.icons_circle.activity.AboutThemeActivity"
-            android:label="@string/about_theme"
-            android:screenOrientation="portrait" >
+        <activity android:name="com.numix.icons_circle.activity.SplashScreenActivity"
+            android:label="@string/app_name" >
         </activity>
 
     <!-- This is the Activity Dialog that pops up when selecting to apply your Icon Pack
@@ -173,6 +174,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
 		</activity>
+
+        <!-- Google Mobile Ads activity. -->
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 
     <!-- android:authorities NEEDS to be changed manually for each new pack
     	Failure to change name, will result in installation errors -->
