--- a/MainActivity22/app/src/main/AndroidManifest.xml
+++ b/MainActivity22/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
 
     <!-- Main Activity that launches when you open the app from the drawer -->
         <activity
-            android:name="com.numix.icons_circle.activity.MainActivity"
+            android:name="com.numix.icons_circle.activity.SplashScreenActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -69,7 +69,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.numix.icons_circle.activity.SplashScreenActivity"
+        <activity android:name="com.numix.icons_circle.activity.MainActivity"
             android:label="@string/app_name" >
         </activity>
 
