--- a/MainActivity22/app/build.gradle
+++ b/MainActivity22/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'android'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.0.0"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.0"
 
     defaultConfig {
         applicationId "com.numix.icons_circle"
         minSdkVersion 16
-        targetSdkVersion 21
+        targetSdkVersion 22
     }
 
     buildTypes {
@@ -17,8 +17,11 @@ android {
 }
 
 dependencies {
-    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:+'
     compile 'com.google.android.gms:play-services:6.5.+'
+    compile 'com.android.support:cardview-v7:22.0.+'
+    compile 'com.android.support:recyclerview-v7:22.0.+'
+    compile 'it.neokree:MaterialNavigationDrawer:1.3.2'
+    compile 'com.android.support:appcompat-v7:22.0.0'
     compile files('libs/pkrequestmanager.jar')
 }
