--- a/MainActivity22/app/src/main/AndroidManifest.xml
+++ b/MainActivity22/app/src/main/AndroidManifest.xml
@@ -66,6 +66,9 @@
         </activity>
 
         <activity
+            android:name="com.numix.icons_circle.activity.AllIcons"/>
+
+        <activity
             android:name="com.numix.icons_circle.activity.Wallpaper"
             android:label="@string/app_name"
             android:icon="@drawable/icon_wall"
