--- a/MainActivity22/app/src/main/AndroidManifest.xml
+++ b/MainActivity22/app/src/main/AndroidManifest.xml
@@ -4,14 +4,14 @@
 ** Copyright 2015, The Numix Project
 
 
-************ Last published version on Google Play: 2.0.4 - 9 ************
+************ Last published version on Google Play: 2.1 - 10 ************
 -->
 
 <manifest
 		xmlns:android="http://schemas.android.com/apk/res/android"
       	package="com.numix.icons_circle"
-      	android:versionCode="9"
-      	android:versionName="2.0.4"
+      	android:versionCode="10"
+      	android:versionName="2.1"
       	android:installLocation="auto">
     <!-- android:installLocation is set to "auto"
     change to "internalOnly" if you want it installed to the internal memory -->
@@ -72,6 +72,7 @@
             android:name="com.numix.icons_circle.activity.Wallpaper"
             android:label="@string/app_name"
             android:icon="@drawable/icon_wall"
+            android:theme="@style/Theme.MyTheme"
             android:finishOnCloseSystemDialogs="true">
             <intent-filter>
                 <!--
