--- a/MainActivity22/app/build.gradle
+++ b/MainActivity22/app/build.gradle
@@ -18,10 +18,10 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:+'
-    compile 'com.google.android.gms:play-services:6.5.+'
+    compile 'com.google.android.gms:play-services:7.3.0'
     compile 'com.android.support:cardview-v7:22.0.+'
     compile 'com.android.support:recyclerview-v7:22.0.+'
-    compile 'it.neokree:MaterialNavigationDrawer:1.3.2'
+    compile 'it.neokree:MaterialNavigationDrawer:1.3.3'
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile files('libs/pkrequestmanager.jar')
 }
