--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,5 +18,5 @@ dependencies {
     compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile 'com.android.support:support-v4:+'
     compile files('libs/pkrequestmanager.jar')
-    compile 'com.google.android.gms:play-services:6.+'
+    compile 'com.google.android.gms:play-services:7.3.0'
 }
