--- a/MainActivity22/local.properties
+++ b/MainActivity22/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 07 10:50:51 CET 2014
+#Mon Jun 08 17:17:28 CEST 2015
 sdk.dir=/home/paolo/Android/Sdk
