--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Built application files
-*.apk
-*.ap_
-
 # Files for the Dalvik VM
 *.dex
 
@@ -11,6 +7,7 @@
 # Generated files
 bin/
 gen/
+.idea/
 
 # Gradle files
 .gradle/
