--- a/MainActivity22/app/build.gradle
+++ b/MainActivity22/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'android'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.0"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
         applicationId "com.numix.icons_circle"
@@ -17,6 +17,9 @@ android {
 }
 
 dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/FacebookAdapter.jar')
+    compile 'com.facebook.android:facebook-android-sdk:4.1.0'
     compile 'com.android.support:support-v4:+'
     compile 'com.google.android.gms:play-services:7.3.0'
     compile 'com.android.support:cardview-v7:22.0.+'
