--- a/MainActivity22/app/src/main/AndroidManifest.xml
+++ b/MainActivity22/app/src/main/AndroidManifest.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--
-** Copyright 2015, The Numix Project
-
-
-************ Last published version on Google Play: 2.1.1 - 11 ************
+** Copyright 2015, Numix Project Ltd.
 -->
 
 <manifest
 		xmlns:android="http://schemas.android.com/apk/res/android"
       	package="com.numix.icons_circle"
-      	android:versionCode="13"
-      	android:versionName="2.2.0
-      	"
+      	android:versionCode="14"
+      	android:versionName="2.2.1"
       	android:installLocation="auto">
     <!-- android:installLocation is set to "auto"
     change to "internalOnly" if you want it installed to the internal memory -->
+
+    <!-- meta-data required for Facebook Audience Network -->
+    <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
 
     <!-- Permission required for setting the wallpaper -->
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
@@ -163,6 +162,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
 		</activity>
+
+        <!-- Facebook Audience Network activity -->
+        <activity android:name="com.facebook.ads.InterstitialAdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
 
         <!-- Google Mobile Ads activity. -->
         <activity android:name="com.google.android.gms.ads.AdActivity"
